<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ceria</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="tagihan">Tagihan</string>
    <string name="cicilan">Cicilan</string>
    <string name="promo">Promo</string>
    <string name="profil">Profil</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="masuk">Masuk Kembali</string>
    <string name="ayo_gabung">Selamat Datang di Ceria !</string>
    <string name="di_ceria">Temukan Kebahagianmu dengan berbelanja bersama kami</string>
    <string name="phone_number">No. Handphone</string>
    <string name="registered_number">No. Handphone Terdaftar</string>
    <string name="login_uppercase">LOGIN</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="agree_checked"><![CDATA[ Dengan ini, Kamu sudah setuju dengan membaca dan menyetujui ]]><font color='#5E07A0'><b>Syarat dan Ketentuan</b></font> Ceria</string>
    <string name="authorized_by_ojk">Aplikasi Ceria terdaftar dan diawasi<br>oleh Otoritas Jasa Keuangan</br> </string>
    <string name="saya_setuju">Saya Setuju</string>
    <string name="terms_title">Syarat dan Ketentuan</string>
    <string name="terms_subtitle">FASILITAS PINJAMAN "CERIA"</string>
    <string name="security_code">Verifikasi Nomor</string>
    <string name="security_forget_code">Kode Keamanan</string>
    <string name="otp_verification_description">Masukan kode keamanan yang baru saja dikirimkan ke nomor handphone kamu untuk mulai mendaftar</string>
    <string name="otp_not_received">Tidak menerima kode keamanan?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tnc_title">Syarat dan Ketentuan Aplikasi Ceria</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="_15">(15)</string>
    <string name="create_pin">Buat PIN</string>
    <string name="create_secure_pin_message">Buat PIN yang aman untuk membuka aplikasi Sahabat</string>
    <string name="create_pin_info">PIN harus berjumlah 6 angka, hindari menggunakan angka berulang</string>
    <string name="signup_success">Selamat akun kamu sudah terbuat!</string>
    <string name="congratulation_description">Ajukan limit kredit untuk menikmati fasilitas setara kartu kredit!</string>
    <string name="asyik">Asyik!</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="change_phone_number">Ubah Nomor Handphone</string>
    <string name="input_pin">Masukkan PIN</string>
    <string name="forgot_pin">LUPA PIN?</string>
    <string name="dont_have_an_account">Belum punya akun?</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="lupa_pin">Lupa PIN?</string>
    <string name="third_time_input_pin">Kamu salah memasukkan<br /> PIN sebanyak 3 kali</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="reset_pin_desc"><![CDATA[Kami akan kirimkan kode keamanan via \n]]><b>SMS ke nomor kamu </b><![CDATA[untuk mengatur\nulang PIN]]></string>
    <string name="dont_have_access_number">Tidak memiliki akses ke no. HP ini?</string>
    <string name="send_code">Kirimkan Kode</string>
    <string name="create_pin_forget">Buat PIN Baru</string>
    <string name="create_pin_forget_desc">Buat PIN baru yang aman untuk membuka aplikasi Ceria</string>
    <string name="pin_confirmation">Konfirmasi PIN</string>
    <string name="reinput_pin">Ulangi PIN untuk mengkonfirmasi PIN yang baru saja kamu buat</string>
    <string name="change_pin_success">PIN berhasil diubah</string>
    <string name="reset_email_desc"><![CDATA[Kami akan mengirimkan kode keamanan\n]]><b>ke email terdaftar </b><![CDATA[kamu untuk mengatur\nulang PIN]]></string>
    <string name="registered_email">Email Terdaftar</string>
    <string name="dont_have_access_email">Tidak memiliki akses ke email ini?</string>
    <string name="dont_have_number_access"><![CDATA[Tidak memiliki akses\n]]>ke nomor terdaftar?</string>
    <string name="dont_have_email_access"><![CDATA[Tidak memiliki akses\n]]>ke email terdaftar?</string>
    <string name="dont_have_access_desc"><![CDATA[Jangan khawatir, hubungi kami di call\n]]>centre atau WhatsApp untuk bantuan</string>
    <string name="call_centre_bri">Call Centre BRI</string>
    <string name="number_call_center"><font color='#5E07A0'>14017 </font><font color='#E6000000'>atau </font><font color='#5E07A0'>(021) 1500 017</font></string>
    <string name="whatsapp">WhatsApp</string>
    <string name="tunggu_dulu">Tunggu Dulu!</string>
    <string name="ya_batalkan">Ya, Batalkan</string>
    <string name="tidak_kembali">Tidak, Kembali Lagi</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="ups_ada_masalah">Ups, Ada Masalah</string>
    <string name="ups_kamu_gagal">Ups, Kamu Gagal</string>
    <string name="perbedaan_handphone">Perbedaan No.Handphone</string>
    <string name="name_profile">Rama Kumbara</string>
    <string name="financial_dashboard">Financial Dashboard</string>
    <string name="change_pin">Ubah PIN</string>
    <string name="bantuan">Bantuan</string>
    <string name="give_suggestion">Beri Masukan</string>
    <string name="about_us">Tentang Kami</string>
    <string name="log_out">Log Out</string>
    <string name="collectibility_status"><font color='#CC000000'>Status Kolektibilitas</font> <font color='#5E07A0'>Lancar</font></string>
    <string name="welcome"><![CDATA[Selamat\nDatang!]]></string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="data_pekerjaan">Data Pekerjaan</string>
    <string name="ajukan_limit_kredit">Ajukan Limit Kredit</string>
    <string name="enjoy_life">Nikmati Hidup Sekarang</string>
    <string name="beragam_promo_menarik">Beragam Promo Menarik</string>
    <string name="promo_list_home"><p style="color:white;font-size:16px;font-weight:bold">Ke Mana Pun</p><![CDATA[\n]]><p style="color:white;font-size:32px;font-weight:bold">Sesukamu!</p><![CDATA[\n]]><p style="color:white;font-size:12px">Diskon hingga</p><![CDATA[\n]]><p style="color:#F5A623;font-size:40px;font-weight:bold">30%</p></string>
    <string name="travel_promo">Travel Promo</string>
    <string name="total_tagihanmu">Total Tagihanmu</string>
    <string name="rp">Rp</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="no_rek_autodebet">No. Rek. Autodebet</string>
    <string name="riwayat_tagihan">Riwayat Tagihan</string>
    <string name="cicilan_aktif">Cicilan Aktif</string>
    <string name="riwayat_cicilan">Riwayat Cicilan</string>
    <string name="voucher_hotel_borobudur">Voucher Hotel Borobudur</string>
    <string name="cicilan_tersisa">Cicilan Tersisa</string>
    <string name="amount_installment">Rp. %1$s</string>
    <string name="percentage_installment">%1$d Completed</string>
    <string name="belanja_lebih_mudah">Belanja Lebih Mudah</string>
    <string name="title_apply_first"><b>Silakan untuk menjawab<![CDATA[\n]]> pertanyaan</b> yang telah<![CDATA[\n]]> disiapkan di bawah</string>
    <string name="_1.">1.</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    <string name="_2.">2.</string>
    <string name="_3.">3.</string>
    <string name="lanjutkan_pengajuan">Lanjutkan Pengajuan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="ubah_no_handphone">Ubah No. Handphone</string>
    <string name="title_apply_second"><b>Selangkah lebih dekat</b><br>untuk mulai belanja</br></string>
    <string name="kartu_atm_bri">Kartu ATM BRI</string>
    <string name="penghasilan_minimal">Minimal Penghasilan 3 Juta Rupiah</string>
    <string name="dokumen_bukti_penghasilan">Dokumen Bukti Penghasilan</string>
    <string name="title_apply_third"><b>Verifikasi</b><![CDATA[\n]]>Data Nasabah</string>
    <string name="nomor_e_ktp">Nomor E-KTP</string>
    <string name="digit_terakhir_kartu_atm">4 Digit Terakhir Kartu ATM</string>
    <string name="expired_date_atm">Kadaluarsa Kartu ATM Rekening BRI</string>
    <string name="keterangan_kadaluarsa_ATM">Masukkan 12/99 untuk kartu private label</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="sukseess">Sukseess!</string>
    <string name="title_apply_fourth">Pengisian Data</string>
    <string name="foto_ktp">Ambil Foto E-KTP</string>
    <string name="desc_foto_ktp">Pastikan ambil foto e-ktp dengan jelas</string>
    <string name="data_kerabat">Data Kerabat</string>
    <string name="apply_form_agreement">Saya menyatakan telah mengisi data - data di atas secara baik dan benar</string>
    <string name="kirim">Kirim</string>
    <string name="foto_ulang">Foto Ulang</string>
    <string name="gunakan_foto">Gunakan Foto</string>
    <string name="data_diri">Data Diri</string>
    <string name="email">Email</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="punya_telepon_rumah">Punya telepon rumah?</string>
    <string name="punya">Punya</string>
    <string name="saya_memiliki_kartu_kredit">Saya memiliki kartu kredit</string>
    <string name="data_tempat_tinggal">Data Tempat Tinggal</string>
    <string name="alamat">Alamat</string>
    <string name="rt_rw">RT / RW</string>
    <string name="simpan">Simpan</string>
    <string name="data_keluarga">Data Keluarga</string>
    <string name="nama_gadis_ibu_kandung">Nama Gadis Ibu Kandung</string>
    <string name="kontak_darurat">Kontak Darurat</string>
    <string name="nama_kerabat">Nama Kerabat</string>
    <string name="no_telepon_kerabat">No. Telepon Kerabat</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="alamat_kerabat">Alamat Kerabat</string>
    <string name="data_keuangan">Data Keuangan</string>
    <string name="nomor_npwp">Nomor NPWP</string>
    <string name="_1_kartu_atm_bri">1. Kartu ATM BRI</string>
    <string name="_2_minimal_penghasilan_3_juta_rupiah">2. Minimal Penghasilan 3 Juta Rupiah</string>
    <string name="rama_kumbara">Rama Kumbara</string>
    <string name="desc_canceling_otp_verification">Kamu akan meninggalkan pendaftaranmu<![CDATA[\n]]>dan akan mulai dari awal. Apabila sudah<![CDATA[\n]]>yakin, pilih lanjutkan</string>
    <string name="desc_apply_second">Kamu memerlukan hal-hal di bawah ini<![CDATA[\n]]>untuk melakukan pengajuan limit</string>
    <string name="example_account_number">1895 0000 9281 0000</string>
    <string name="example_hidden_phone_number">08***93289</string>
    <string name="digital_signature_kamu_berhasil_dibuat"><b>Digital Signature kamu</b><![CDATA[\nberhasil dibuat!]]></string>
    <string name="username_privy_id">Username Privy.id</string>
    <string name="ramakumbara">RamaKumbara</string>
    <string name="nama_sesuai_ktp">Nama Sesuai KTP</string>
    <string name="desc_privy"><![CDATA[Digital signature kamu berhasil dibuat \nmelalui Certificate Authorithy (CA) \nPrivy.id. Untuk menggunakan Digital \nSignature, kamu harus melakukan \n2-Factor Authentication berupa OTP \ndan proses verifikasi dengan foto selfie. \n\nGunakan username kamu untuk dapat \nmasuk ke dalam website privy.id.]]></string>
    <string name="status_kolektibilitas">Status Kolektibilitas</string>
    <string name="lancar">Lancar</string>
    <string name="example_desc_base_collectibility_dialog">Hai Rama! Status Kolektibilitasmu lancar karena membayar tagihan tepat waktu. Pertahankan terus ya! :)</string>
</resources>