<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_privy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title_privy"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="30dp"
                android:text="@string/digital_signature_kamu_berhasil_dibuat"
                android:textColor="@color/black80"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_privy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_16"
                android:src="@drawable/logo_privy_colored"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_privy" />

            <TextView
                android:id="@+id/tv_username_privy"
                style="@style/TextAppearance.MdcTypographyStyles.Caption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/username_privy_id"
                android:textColor="@color/black80"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_privy" />

            <TextView
                android:id="@+id/tv_username_content_privy"
                style="@style/TextAppearance.MdcTypographyStyles.Caption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:text="@string/ramakumbara"
                android:textColor="@color/black80"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_username_privy" />

            <TextView
                android:id="@+id/tv_name_privy"
                style="@style/TextAppearance.MdcTypographyStyles.Caption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/nama_sesuai_ktp"
                android:textColor="@color/black80"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_username_content_privy" />

            <TextView
                android:id="@+id/tv_name_content_privy"
                style="@style/TextAppearance.MdcTypographyStyles.Caption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:text="@string/rama_kumbara"
                android:textColor="@color/black80"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_privy" />

            <TextView
                android:id="@+id/tv_ktp_privy"
                style="@style/TextAppearance.MdcTypographyStyles.Caption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/nomor_e_ktp"
                android:textColor="@color/black80"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_content_privy" />

            <TextView
                android:id="@+id/tv_ktp_content_privy"
                style="@style/TextAppearance.MdcTypographyStyles.Caption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:text="@string/example_account_number"
                android:textColor="@color/black80"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ktp_privy" />

            <TextView
                android:id="@+id/tv_desc_privy"
                style="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/desc_privy"
                android:textColor="@color/black80"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ktp_content_privy" />

            <Button
                android:id="@+id/btn_privy"
                style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_20"
                android:background="@drawable/selector_btn_primary"
                android:paddingHorizontal="@dimen/margin_20"
                android:text="@string/lanjutkan"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_privy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>
