<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_reset_pin"
            style="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <ImageView
            android:id="@+id/iv_reset_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_36"
            android:src="@drawable/ic_reset_pin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_reset_pin" />

        <TextView
            android:id="@+id/tv_reset_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="16dp"
            android:text="@string/reset_pin"
            android:textColor="@color/black"
            android:textSize="@dimen/text_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_reset_pin" />

        <TextView
            android:id="@+id/tv_desc_forget_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:lineSpacingMultiplier="@dimen/linespacing_medium"
            android:text="@string/reset_pin_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reset_pin" />

        <TextView
            android:id="@+id/tv_registered_number_reset_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/registered_number"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_forget_pin" />

        <TextView
            android:id="@+id/tv_number_reset_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="4dp"
            android:text="@string/example_hidden_phone_number"
            android:textColor="@color/black80"
            android:textSize="@dimen/text_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_registered_number_reset_pin" />

        <TextView
            android:id="@+id/tv_dont_have_access_reset_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="24dp"
            android:text="@string/dont_have_access_number"
            android:textAllCaps="true"
            android:onClick="@{clickListener}"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_number_reset_pin" />

        <Button
            android:id="@+id/btn_reset_pin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rbk_btn_full"
            android:background="@drawable/selector_btn_primary_full"
            android:onClick="@{clickListener}"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/rbk_btn_txt_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
