<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.apply.questionnaire.ApplySecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_apply_second"
            style="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_apply_second"
            style="@style/TextAppearance.MdcTypographyStyles.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/title_apply_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_apply_second" />

        <TextView
            android:id="@+id/tv_desc_apply_second"
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:lineSpacingExtra="6sp"
            android:text="@string/desc_apply_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_apply_second" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_one_apply_second"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/_1_kartu_atm_bri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_apply_second" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_two_apply_second"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/_2_minimal_penghasilan_3_juta_rupiah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_one_apply_second" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apply_second"
            style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/rbk_btn_height"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/selector_btn_primary"
            android:enabled="false"
            android:paddingHorizontal="@dimen/margin_20"
            android:text="@string/lanjutkan_pengajuan"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>