<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16">

        <TextView
            android:id="@+id/tv_canceling_otp_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_16"
            android:text="@string/tunggu_dulu"
            android:textColor="@color/black80"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_desc_canceling_otp_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/text_16"
            android:text="@string/desc_canceling_otp_verification"
            android:textAlignment="center"
            android:textColor="@color/black80"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_canceling_otp_verification" />

        <Button
            android:id="@+id/btn_no_canceling_otp_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin_20"
            android:background="@android:color/transparent"
            android:text="@string/ya_batalkan"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/guide_canceling_otp_verification"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_canceling_otp_verification" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_canceling_otp_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btn_yes_canceling_otp_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/selector_btn_primary"
            android:paddingHorizontal="18dp"
            android:text="@string/tidak_kembali"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/guide_canceling_otp_verification"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_canceling_otp_verification" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
