<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_20">

    <TextView
        android:id="@+id/tv_collectibility_base_dialog"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/status_kolektibilitas"
        android:textAllCaps="true"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_collectibility_base_dialog"
        style="@style/TextAppearance.MdcTypographyStyles.Headline4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_16"
        android:text="@string/lancar"
        android:textAlignment="center"
        android:textColor="@color/colorPea"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_collectibility_base_dialog" />

    <TextView
        android:id="@+id/tv_desc_collectibility_base_dialog"
        style="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_16"
        android:text="@string/example_desc_base_collectibility_dialog"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_collectibility_base_dialog" />


</androidx.constraintlayout.widget.ConstraintLayout>